// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="src__Button-bjtQYq hbHmah"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  className="src__Button-bjtQYq hbHmah"
  onClick={[Function]}
>
  Hello Button
</button>
`;
